# matrix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: matrix.hpp  myVector.hpp
src/: matrix.cpp
tests/: test.txt  testGen.py
